#48 - Years and pathway headers do not align as table headers with their respective columns on mobile. Can we fix this? See screenshot.

--- a/src/components/explore/ExploreByPathway.scss
+++ b/src/components/explore/ExploreByPathway.scss
@@ -1,61 +1,61 @@
-@import "../../_styles/variables";
-@import "../../_styles/mixins";
+// @import "../../_styles/variables";
+// @import "../../_styles/mixins";
 
-.table-header-holder {
-  top: 0;
-  background: $light-color;
-}
-.table-body-holder {
-}
+// .table-header-holder {
+//   top: 0;
+//   background: $light-color;
+// }
+// .table-body-holder {
+// }
 
-.nzap-table {
-  .nzap-table-row {
-    white-space: nowrap;
-    &:hover {
-      background: $pianissimo-color;
-    }
-  }
-}
+// .nzap-table {
+//   .nzap-table-row {
+//     white-space: nowrap;
+//     &:hover {
+//       background: $pianissimo-color;
+//     }
+//   }
+// }
 
-.l1-label {
-  background: $base-color;
-}
-.l1-label.pathway-lead {
-  @include font($font-family-primary, $font-weight-semi-bold, $medium, $light-color);
-}
-.l2-label {
-  background: $piano-color;
-}
-.l2-label.pathway-lead {
-  @include font($font-family-primary, $font-weight-regular, $medium, $ground-color);
-}
+// .l1-label {
+//   background: $base-color;
+// }
+// .l1-label.pathway-lead {
+//   @include font($font-family-primary, $font-weight-semi-bold, $medium, $light-color);
+// }
+// .l2-label {
+//   background: $piano-color;
+// }
+// .l2-label.pathway-lead {
+//   @include font($font-family-primary, $font-weight-regular, $medium, $ground-color);
+// }
 
-.nzap-table-header-cell.pathway-lead {
-  width: 16%;
-  white-space: normal;
-  @include font($font-family-primary-narrow, $font-weight-light, $small, $mezzoforte-color);
-  &:hover {
-    background: $light-color;
-  }
-}
-.nzap-table-header-cell {
-  width: 12%;
-  white-space: normal;
-  span.label {
-    @include font($font-family-primary, $font-weight-extra-bold, $small, $accent-color);
-  }
-  span.alt-name {
-    @include font($font-family-primary, $font-weight-regular, $small, $base-color);
-  }
-}
-.nzap-table-cell.pathway-lead {
-  @include font($font-family-primary-narrow, $font-weight-regular, $small, $base-color);
-  white-space: break-spaces;
-  width: 16%;
-  border-left: none;
-}
-.nzap-table-cell {
-  width: 12%;
-  @include font($font-family-primary, $font-weight-semi-bold, $small, $ground-color);
-  border-left: 1px $ground-color solid;
-}
+// .nzap-table-header-cell.pathway-lead {
+//   width: 16%;
+//   white-space: normal;
+//   @include font($font-family-primary-narrow, $font-weight-light, $small, $mezzoforte-color);
+//   &:hover {
+//     background: $light-color;
+//   }
+// }
+// .nzap-table-header-cell {
+//   width: 12%;
+//   white-space: normal;
+//   span.label {
+//     @include font($font-family-primary, $font-weight-extra-bold, $small, $accent-color);
+//   }
+//   span.alt-name {
+//     @include font($font-family-primary, $font-weight-regular, $small, $base-color);
+//   }
+// }
+// .nzap-table-cell.pathway-lead {
+//   @include font($font-family-primary-narrow, $font-weight-regular, $small, $base-color);
+//   white-space: break-spaces;
+//   width: 16%;
+//   border-left: none;
+// }
+// .nzap-table-cell {
+//   width: 12%;
+//   @include font($font-family-primary, $font-weight-semi-bold, $small, $ground-color);
+//   border-left: 1px $ground-color solid;
+// }
